Feaature parity with dialog support

--- a/medCalc/app/index.html
+++ b/medCalc/app/index.html
@@ -63,7 +63,7 @@
             <md-button class="menu" hide-gt-sm ng-click="toggleLeftPanel()" aria-label="Show Calculators List">
                 <md-icon md-svg-icon="menu"></md-icon>
             </md-button>
-            <div layout="row" flex class="fill-height">
+            <div layout="row" flex class="fill-height" layout-align="left center">
                 <h2 class="md-heading">Ιατρικό Βοήθημα</h2>
             </div>
         </md-toolbar>
