--- a/medCalc/app/index.html
+++ b/medCalc/app/index.html
@@ -73,7 +73,7 @@
             </div>
         </md-toolbar>
 
-        <md-content id="view-cards" md-scroll-y layout-padding on-visible>
+        <md-content id="view-cards" md-scroll-y layout-padding>
             <div ng-repeat="(categoryName, category) in categories">
                 <div class="view-card"
                      id="{{::view.description.id}}"
