--- a/medCalc/app/index.html
+++ b/medCalc/app/index.html
@@ -80,12 +80,7 @@
                 <h2 class="md-heading">Ιατρικό Βοήθημα</h2>
             </div>
         </md-toolbar>
-        <md-tabs 
-            flex 
-            layout="column" 
-            md-border-bottom 
-            md-selected="selectedTabCategoryIndex"
-            md-enable-disconnect> 
+        <md-tabs flex layout="column" md-border-bottom md-selected="selectedTabCategoryIndex" md-enable-disconnect> 
             <md-tab flex layout="column" layout-fill ng-repeat="(key, category) in views.categories.categories" label="{{category.name}}">
                 <md-tab-content flex layout-fill md-scroll-y layout-padding id="view-cards-{{category.name}}">
                     <div class="view-card"
