--- a/medCalc/app/index.html
+++ b/medCalc/app/index.html
@@ -39,31 +39,23 @@
 </head>
 
 <body ng-strict-di ng-app="medicalCalculator" ng-controller="calculatorController" layout="row" ng-cloak>
-    <md-sidenav class="site-sidenav md-sidenav-left md-whiteframe-z2"
-                layout="column"
-                md-component-id="left"
-                md-swipe-left="closeLeftPanel()"
-                md-is-locked-open="$mdMedia('gt-sm')">
-            <md-input-container md-no-float class="search md-icon-float md-block md-icon-right">
-                <md-icon md-svg-src="search"></md-icon>
-                <input ng-model="filterText" type="text" placeholder="Αναζήτηση...">
-                <md-icon ng-show="filterText" md-svg-icon="close" ng-click="clearSearchBox()"></md-icon>
-            </md-input-container>
-        <md-content md-scroll-y
-                    role="navigation">
+    <md-sidenav class="site-sidenav md-sidenav-left md-whiteframe-z2" layout="column" md-component-id="left" md-swipe-left="closeLeftPanel()"
+    md-is-locked-open="$mdMedia('gt-sm')">
+        <md-input-container md-no-float class="search md-icon-float md-block md-icon-right">
+            <md-icon md-svg-src="search"></md-icon>
+            <input ng-model="filterText" type="text" placeholder="Αναζήτηση...">
+            <md-icon ng-show="filterText" md-svg-icon="close" ng-click="clearSearchBox()"></md-icon>
+        </md-input-container>
+        <md-content md-scroll-y role="navigation">
             <md-list id="navview">
                 <div ng-repeat="view in viewsList() track by view.description.id">
-                    <md-subheader ng-if="isNewCategory($index)[0]!=''"
-                                  class="md-primary md-hue-1">
+                    <md-subheader ng-if="isNewCategory($index)[0]!=''" class="md-no-sticky md-primary md-hue-1 "> 
                         {{isNewCategory($index)[0]}}
                     </md-subheader>
-                    <md-subheader ng-if="isNewCategory($index)[1]!=''"
-                                  class="md-hue-1">
+                    <md-subheader ng-if="isNewCategory($index)[1]!=''" class="md-no-sticky md-hue-1">
                         {{isNewCategory($index)[1]}}
                     </md-subheader>
-                    <md-list-item class="nav-view-item"
-                                  ng-href="#{{view.description.id}}"
-                                  ng-click="navViewItemClicked($event)">
+                    <md-list-item class="nav-view-item" ng-href="#{{view.description.id}}" ng-click="navViewItemClicked($event)">
                         {{::view.description.name}}
                     </md-list-item>
                 </div>
@@ -80,18 +72,22 @@
                 <h2 class="md-heading">Ιατρικό Βοήθημα</h2>
             </div>
         </md-toolbar>
-        <md-tabs flex layout="column" md-border-bottom md-selected="selectedTabCategoryIndex" md-enable-disconnect> 
-            <md-tab flex layout="column" layout-fill ng-repeat="(key, category) in views.categories.categories" label="{{category.name}}">
-                <md-tab-content flex layout-fill md-scroll-y layout-padding id="view-cards-{{category.name}}">
-                    <div class="view-card"
-                         ng-repeat="view in viewsList() track by view.description.id"
-                         id="{{::view.description.id}}">
-                        <view view="view"></view>
-                        <md-divider ng-if="!$last"></md-divider>
-                    </div>
-                </md-tab-content>
+        <md-tabs flex layout="column" md-selected="selectedTabCategoryIndex" md-enable-disconnect>
+            <md-tab flex layout="column" layout-fill ng-repeat="(key, category) in views.categories.categories">
+                <md-tab-label>
+                    <md-icon class="material-icons md-48" md-svg-icon="{{::category.name}}" aria-label="{{::category.name}} icon"></md-icon>
+                </md-tab-label>
+                <md-tab-body>
+                    <md-tab-content flex layout-fill md-scroll-y layout-padding id="view-cards-{{::category.name}}">
+                        <div class="view-card" ng-repeat="view in viewsList() track by view.description.id" id="{{::view.description.id}}">
+                            <view view="view"></view>
+                            <md-divider ng-if="!$last"></md-divider>
+                        </div>
+                    </md-tab-content>
+                </md-tab-body>
             </md-tab>
         </md-tabs>
     </div>
 </body>
+
 </html>
