--- a/medCalc/app/index.html
+++ b/medCalc/app/index.html
@@ -49,41 +49,52 @@
         <md-content md-scroll-y role="navigation">
             <!-- add `multiple` attribute to allow multiple sections to open at once -->
             <!-- add expanded attribute to open the section -->
-            <md-list>
-                <md-list-item ng-repeat="(key, view) in views.categories.categories[categoryIndexToName(selectedTabCategoryIndex)].views"
-                    class="nav-view-item" ng-href="#{{view.description.id}}" ng-click="navViewItemClicked($event)">
-                    {{::view.description.name}}
-                </md-list-item>
-            </md-list>
+
             <v-accordion class="vAccordion--default" multiple>
-                <v-pane expanded ng-repeat="(key, category) in views.categories.categories[categoryIndexToName(selectedTabCategoryIndex)].categories">
-                    <v-pane-header class="md-hue-1">
+                <v-pane ng-repeat="(key, category) in views.categories.categories">
+                    <v-pane-header class="md-hue-3">
+                        <md-icon class="material-icons md-48" md-svg-icon="{{::category.name}}" aria-label="{{::category.name}} icon"></md-icon>
                         {{::category.name}}
                     </v-pane-header>
                     <v-pane-content>
                         <md-list>
-                            <md-list-item ng-repeat="(key, view) in category.views" class="nav-view-item" ng-href="#{{view.description.id}}" ng-click="navViewItemClicked($event)">
+                            <md-list-item ng-repeat="(key, view) in category.views"
+                                class="nav-view-item" ng-href="#{{view.description.id}}">
                                 {{::view.description.name}}
                             </md-list-item>
                         </md-list>
-                        <v-accordion class="vAccordion--default" multiple expanded>
-                            <v-pane expanded ng-repeat="(key, category) in category.categories">
-                                <v-pane-header>
+                        <v-accordion class="vAccordion--default" multiple>
+                            <v-pane ng-repeat="(key, category) in category.categories">
+                                <v-pane-header class="md-hue-1">
                                     {{::category.name}}
                                 </v-pane-header>
-
                                 <v-pane-content>
                                     <md-list>
-                                        <md-list-item ng-repeat="(key, view) in category.views" class="nav-view-item" ng-href="#{{view.description.id}}" ng-click="navViewItemClicked($event)">
+                                        <md-list-item ng-repeat="(key, view) in category.views" class="nav-view-item" ng-href="#{{view.description.id}}">
                                             {{::view.description.name}}
                                         </md-list-item>
                                     </md-list>
+                                    <v-accordion class="vAccordion--default" multiple> 
+                                        <v-pane ng-repeat="(key, category) in category.categories">
+                                            <v-pane-header>
+                                                {{::category.name}}
+                                            </v-pane-header>
+
+                                            <v-pane-content>
+                                                <md-list>
+                                                    <md-list-item ng-repeat="(key, view) in category.views" class="nav-view-item" ng-href="#{{view.description.id}}">
+                                                        {{::view.description.name}}
+                                                    </md-list-item>
+                                                </md-list>
+                                            </v-pane-content>
+                                        </v-pane>
+                                    </v-accordion>
                                 </v-pane-content>
                             </v-pane>
                         </v-accordion>
                     </v-pane-content>
                 </v-pane>
-            </v-accordion>
+            </v-accordion>            
         </md-content>
     </md-sidenav>
 
@@ -100,33 +111,9 @@
                 <md-icon md-svg-icon="more"></md-icon>
             </md-button>-->
         </md-toolbar>
-        <md-tabs flex layout="column" md-selected="selectedTabCategoryIndex" md-enable-disconnect>
-            <md-tab flex layout="column" layout-fill ng-repeat="(key, category) in views.categories.categories">
-                <md-tab-label>
-                    <md-icon class="material-icons md-48" md-svg-icon="{{::category.name}}" aria-label="{{::category.name}} icon"></md-icon>
-                </md-tab-label>
-                <md-tab-body>
-                    <md-tab-content flex layout-fill md-scroll-y layout-padding id="view-cards-{{::category.name}}">
-                        <div class="view-card" ng-repeat="(key, view) in views.categories.categories[categoryIndexToName(selectedTabCategoryIndex)].views" id="{{::view.description.id}}">
-                            <view view="view"></view>
-                            <md-divider></md-divider>
-                        </div>
-                        <div ng-repeat="(key, category) in views.categories.categories[categoryIndexToName(selectedTabCategoryIndex)].categories">
-                            <div class="view-card" ng-repeat="(key, view) in category.views" id="{{::view.description.id}}">
-                                <view view="view"></view>
-                                <md-divider></md-divider>
-                            </div>
-                            <div ng-repeat="(key, category) in category.categories">
-                                <div class="view-card" ng-repeat="(key, view) in category.views" id="{{::view.description.id}}">
-                                    <view view="view"></view>
-                                    <md-divider></md-divider>
-                                </div>
-                            </div>
-                        </div>
-                    </md-tab-content>
-                </md-tab-body>
-            </md-tab>
-        </md-tabs>
+        <md-content>
+            <ng-view class="calculator-view"></ng-view>
+        </md-content>
     </div>
 </body>
 
